# FunpayAPI

./: .gitignore  README.md  pyproject.toml
examples/: default.py  from_context.py  test.py
funpay/: __init__.py  api.py  enums.py  requester.py  types.py  utils.py
funpay/exceptions/: factory.py
funpay/html/: __init__.py  account_html_parser.py  base_html_parser.py  lots_html_parser.py  reviews_html_parser.py
funpay/http/: __init__.py  aiohttp_client.py  base_client.py  exceptions.py  request.py
funpay/models/: __init__.py  account.py  lot.py  review.py
funpay/parser/: __init__.py  account_parser.py  base_parser.py  lot_parser.py
funpay/parsers/: __init__.py  abc_parser.py  base_parser.py
funpay/parsers/html/: __init__.py  account_parser.py  base_html_parser.py  chat_parser.py  lot_parser.py  lots_trade_parser.py  main_parser.py  message_parser.py  order_parser.py  review_parser.py  user_parser.py
funpay/parsers/json/: __init__.py  base_json_parser.py  chat_parser.py  message_parser.py  raise_node_parser.py  runner_parser.py
funpay/runner/: runner.py
funpay/services/: __init__.py  account_service.py  base.py  base_service.py  chat.py  lot_service.py  lots.py  lots_service.py  orders.py  reviews.py  reviews_service.py
funpay/session/: __init__.py  aiohttp_session.py  base_client_session.py  session_abc.py
