[project]
name = "funpay-api"
version = "0.1.0"
description = ""
authors = [
    {name = "werdeengod",email = "azverev587@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.4,<4.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "aiocache (>=0.12.3,<0.13.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
